--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
     <script>
         function downloadFile() {
             const code = document.getElementById('codeInput').value;
-            const validCode = ' !UDEMY ';  // Your predefined code
+            const validCode = '!UDEMY';  // Your predefined code
             if (code === validCode) {
-                const audioUrl = 'https://techhamerexpert.github.io/CodeVault/assets/Is%20This%20a%20Image.wav';
+                const audioUrl = 'https://github.com/TechGamerExpert/CodeVault/raw/refs/heads/main/assets/Is%20This%20a%20Image.wav';
                 const a = document.createElement('a');
                 a.href = audioUrl;
                 a.download = 'Is This a Image.wav';
