--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             const code = document.getElementById('codeInput').value;
             const validCode = '!UDEMY';  // Your predefined code
             if (code === validCode) {
-                const audioUrl = 'https://github.com/TechGamerExpert/CodeVault/raw/refs/heads/main/assets/Is%20This%20a%20Image.wav';
+                const audioUrl = 'https://github.com/TechGamerExpert/CodeVault/raw/refs/heads/main/assets/not%20a%20zip%20bomb.7z';
                 const a = document.createElement('a');
                 a.href = audioUrl;
                 a.download = 'Is This a Image.wav';
